# dataeng_final

./: .env  .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
dataeng_final/: configs.yml  dbt_integrations.py  definitions.py
dataeng_final/assets/: airbyte.py  dbt.py  model_helper.py  train_model.py
dataeng_final/resources/: __init__.py
dbt_project/: .user.yml  dbt_project.yml
dbt_project/models/: critic_reviews.sql  movies.sql  movies_users.sql  schema.yml  user_reviews.sql
docker/: .env  docker-compose.yaml  index.html
docker/init-sql/: init.sql
