[tool.poetry]
name = "dataeng-final"
version = "0.1.0"
description = ""
authors = ["Pedro Araujo <dodobeatle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.3"
dagster-airbyte = "^0.26.10"
dagster-dbt = "^0.26.10"
dagster = "^1.10.10"
pytest = "^8.3.5"
dbt-postgres = "^1.9.0"
python-dotenv = "^1.1.0"
dbt-core = "^1.9.4"
parsedatetime = "^2.6"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
dagster-mlflow = "^0.26.10"
mlflow = "^2.21.3"
dagit = "^1.10.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dataeng_final.definitions"
project_name = "dataeng_final"

[tool.setuptools.packages.find]
exclude=["dataeng_final_tests"]